Fix text overflow issue and improve styling

--- a/style.css
+++ b/style.css
@@ -14,43 +14,54 @@ body {
 }
 
 .calculator-container {
-    background-color: aliceblue;
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    max-width: 350px;
+    border: 3px black solid;
+    background-color: rgb(255, 72, 0);
 }
 
 .calculator-container button {
     width: 80px;
     height: 80px;
+    margin: 0.1em;
+    border-radius: 10%;
+    
 }
 
 .row1,.row2,.row3,.row4,.row5 {
     display: flex;
 }
 
-.row1 {
-    display: flex;
-    font-size: 1em;
-}
-
 .clear-container {
     display: flex;
     flex-direction: column;
     justify-content: end;
-    flex-wrap: wrap;
 }
 
 .num-display {
-    border: 2px red solid;
-    width: 100%;
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 0 15px 0 0;
-    overflow-wrap: normal;
+    padding: 0 0.2em 0 0;
+    width: 100%;
+    word-break: break-all;
+    border: 2px black solid;
+    border-radius: 0 0 5% 0;
+    border-top: 0;
+    border-left: 0;
 }
 
 .equal-btn {
     flex: 2;
+}
+
+button:hover {
+    background-color: rgb(126, 124, 255);
+}
+
+button:active {
+    background-color: rgb(255, 70, 70);
 }
 
 img {
